--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,1 +1,230 @@
 /* Adicionar aqui toda a estilização criada para sua aplicação. */
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Barlow',sans-serif;
+    background-color: black;
+}
+
+:root {
+    --tamanho-header: 80px;
+    --tamanho-footer: 65px;
+    --tamanho-banner: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    /*
+    --teste1: 80px;
+    --teste2: 65px;
+    --tamanho: calc(100vh - var(--teste1) - var(--teste2) - 2px);
+*/
+}
+
+/*HEADER*/
+
+.header {
+    height: var(--tamanho-header);
+    border-bottom: 2px solid #32b9cd;
+}   
+
+.titulo {
+    color: #32b9cd;
+    width: fit-content;
+    font-weight: 400;
+}
+
+.container {
+    display: flex;
+    width: 80%;
+    margin: auto;
+}
+
+.header .container {
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.navbar {
+    display: flex;
+    width: 300px;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+    color: #e3b062;
+}
+
+.header a {
+    text-decoration: none;
+    color: #e3b062
+}
+
+.agora {
+    font-weight: 800;
+}
+
+/*BANNER*/
+
+.banner {
+    height: var(--tamanho-banner);
+    color: white;
+    background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
+    background-size: cover;
+}
+
+.banner .container {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.banner .container p {
+    width: 50%;
+    margin: 0;
+    padding: 0;
+    font-size: 36px;
+}
+
+.banner .container span {
+    font-weight: 800;
+}
+
+/* MISSÃO VISÃO VALORES */
+
+.social {
+    background-color: #e5e5e5;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.social .container .boxes {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 30px 0;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box img {
+    width: 170px;
+}
+
+/* FOOTER */
+
+.footer {
+    background-color: #32b9cd;
+    height: var(--tamanho-footer);
+    color: #fff;
+    display: flex;
+    font-size: 15px;
+}
+
+.footer .container {
+    justify-content: center;
+    text-align: center;
+}
+
+.version{
+    font-size: 12px;
+}
+
+
+/*Página de Login*/
+.login {
+    display: flex;
+    height: var(--tamanho-banner);
+    background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.login .container {
+    width: 30%;
+    background-color: #d8d7d7;
+    padding: 20px 40px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgb(233, 133, 166);
+    text-align: center;
+}
+.formulario {
+    align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.campo {
+    text-align: left;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+.campo span {
+    font-weight: bold;
+    color: #e91e63;
+}
+
+.campo input {
+    width: 100%;
+    padding: 8px;
+    border: 2px solid #32b9cd;
+    border-radius: 8px;
+    outline: none;
+}
+
+.btn_entrar {
+    width: 100px;
+    margin-top: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    background-color: #e91e63;
+    color: white;
+    font-weight: bold;
+}
+
+/*Página de cadastro*/
+.formulario {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.campo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.campo span {
+    color: #e91e63;
+}
+
+.campo input {
+    width: 100%;
+    padding: 8px;
+    border: 2px solid #32b9cd;
+    border-radius: 8px;
+}
+
+.botao {
+    margin-top: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    background-color: #e91e63;
+    color: white;
+    font-weight: bold;
+}
